Changes to Lab 3
Updates to the files in Lab 3.

--- a/Labs/lab03/lab03-EDA.Rmd
+++ b/Labs/lab03/lab03-EDA.Rmd
@@ -1,5 +1,7 @@
 ---
 title: "Lab 03 - Exploratory Data Analysis"
+author: "Joey Hotz"
+date: "January 27, 2022"
 output:
   html_document:
     html_preview: false
