--- a/Labs/lab04/lab04-data-viz.Rmd
+++ b/Labs/lab04/lab04-data-viz.Rmd
@@ -63,8 +63,32 @@ met <- data.table::fread("met_all.gz")
 -   Create a categorical variable for elevation (breakpoint 252 m)
 
 ```{r, eval = TRUE, echo = FALSE}
-
-
+met_avg <- met %>% 
+  # Remove temperatures below -17°C
+  filter(temp >= -17) %>%
+  # Remove weather station elevations of 9999m (marker for non-recorded value)
+  mutate(elev = na_if(elev, 9999)) %>%
+  # Creating a date variable
+  mutate(date = as.Date(paste(year, month, day, sep = "-"))) %>%
+  # Selecting observations from the first week of the month
+  # mutate(week = data.table::week(date)) %>%
+  # filter(week == min(week)) %>%
+  filter(day <= 7) %>%
+  # Grouping by the weather stations
+  group_by(USAFID) %>%
+  summarise(temp = mean(temp, na.rm = TRUE),
+            rh = mean(rh, na.rm = TRUE),
+            wind.sp = mean(wind.sp, na.rm = TRUE),
+            vis.dist = mean(vis.dist, na.rm = TRUE),
+            dew.point = mean(dew.point, na.rm = TRUE),
+            lat = mean(lat, na.rm = TRUE),
+            lon = mean(lon, na.rm = TRUE), 
+            elev = mean(elev, na.rm = TRUE)) %>%
+  # Creating region variables for NW, SW, NE and SE
+  mutate(region = ifelse(lat > 39.71, "N", "S")) %>%
+  mutate(region = paste(region, ifelse(lon > -98.00, "E", "W"), sep = "")) %>%
+  # Creating a categorical variable for elevation
+  mutate(elev_cat = ifelse(elev > 252, "high", "low"))
 ```
 
 ### 3. Use `geom_violin` to examine the wind speed and dew point temperature by region
@@ -75,9 +99,57 @@ You saw how to use `geom_boxplot` in class. Try using `geom_violin` instead (tak
 -   Make sure to deal with `NA` category
 -   Describe what you observe in the graph
 
-```{r, eval = TRUE, echo = FALSE}
+```{r, eval = TRUE, echo = FALSE, warning = FALSE}
+met_avg %>% 
+  filter(!(region %in% NA)) %>%
+  ggplot(aes(x = region, y = wind.sp, fill = region)) +
+  geom_violin() + 
+  labs(title = "Wind Speeds at Weather Stations in the USA from August 1 - 7", 
+       x = "Region", y = "Wind Speed") +
+  labs(fill = "Region") + 
+  theme(plot.title = element_text(hjust = 0.5)) +
+  theme_bw() +
+  scale_fill_brewer(palette = "Pastel2")
 
+met_avg %>% 
+  filter(!(region %in% NA)) %>%
+  ggplot(aes(x = region, y = wind.sp, fill = region)) +
+  geom_boxplot() + 
+  labs(title = "Wind Speeds at Weather Stations in the USA from August 1 - 7", 
+       x = "Region", y = "Wind Speed") +
+  labs(fill = "Region") + 
+  theme(plot.title = element_text(hjust = 0.5)) +
+  theme_bw() +
+  scale_fill_brewer(palette = "Pastel2")
 ```
+
+```{r, eval = TRUE, echo = FALSE, warning = FALSE}
+met_avg %>% 
+  filter(!(region %in% NA)) %>%
+  ggplot(aes(x = region, y = dew.point, fill = region)) +
+  geom_violin() + 
+  labs(title = "Dew Point Temperatures at Weather Stations in the USA from August 1 - 7", 
+       x = "Region", y = "Dew Point Temperature (°C)") +
+  labs(fill = "Region") + 
+  theme_bw() +
+  theme(plot.title = element_text(hjust = 0.5)) +
+  scale_fill_brewer(palette = "Pastel2")
+
+met_avg %>% 
+  filter(!(region %in% NA)) %>%
+  ggplot(aes(x = region, y = dew.point, fill = region)) +
+  geom_boxplot() + 
+  labs(title = "Dew Point Temperatures at Weather Stations in the USA from August 1 - 7", 
+       x = "Region", y = "Dew Point Temperature (°C)") +
+  labs(fill = "Region") + 
+  theme_bw() +
+  theme(plot.title = element_text(hjust = 0.5)) +
+  scale_fill_brewer(palette = "Pastel2")
+```
+
+Based on the plots above, the Eastern portion of the United States seems to have higher average dew point temperatures and lower wind speeds than the Western half of the country.
+
+The variances of the recorded wind speeds in each of the four regions of the United States seem to be approximately equal, with a slightly higher variance in the Southwest than in the other three regions, but not remarkably higher. However, the variances among dew point temperatures in the Western regions are significantly higher than the variances of dew point temperatures in the Eastern half of the United States. This may be occurring because of the ranges of elevations in the Western half of the United States, as the West has the Rockies and the Pacific coast, whereas the Eastern half of the United states has fewer differences in climate (in comparison) to the West.
 
 ### 4. Use `geom_jitter` with `stat_smooth` to examine the association between dew point temperature and wind speed by region
 
@@ -86,10 +158,25 @@ You saw how to use `geom_boxplot` in class. Try using `geom_violin` instead (tak
 -   Fit a linear regression line by region
 -   Describe what you observe in the graph
 
-```{r, eval = TRUE, echo = FALSE}
-
-  
+```{r, eval = TRUE, echo = FALSE, warning = FALSE, message = FALSE}
+met_avg %>% 
+  filter(!(region %in% NA)) %>%
+  ggplot(aes(x = dew.point, y = wind.sp, color = region)) +
+  geom_point() +
+  stat_smooth(method = lm)  + 
+  labs(title = "Dew Point Temperatures and Wind Speeds measured at\nWeather Stations in the USA from August 1 - 7", 
+       x = "Dew Point Temperature (°C)", y = "Wind Speed") +
+  labs(color = "Region") + 
+  theme_bw() +
+  theme(plot.title = element_text(hjust = 0.5)) +
+  scale_color_brewer(palette = "Set2")
 ```
+
+Based on the plot above, there appears to be a slightly positive correlation between the dew point temperature and measured wind speed for each region except for the Southwest, which appears to have a slightly negative correlation between these values instead.
+
+The Northwest and Southwest both have correlations which are quite close to zero, and the dew point temperatures are very spread out throughout the graph (as we saw in the previous question due to the high variance) whereas the Northeast and Southeast have slightly higher slopes in their regression lines, and the points for these regions are more clustered together.
+
+It would appear that there is a somewhat positive correlation overall between the dew point temperature and the wind speed, but there are likely underlying factors which affect both of these values, such as elevations or general climate patterns in these regions.
 
 ### 5. Use `geom_bar` to create barplots of the weather stations by elevation category coloured by region
 
@@ -101,9 +188,24 @@ You saw how to use `geom_boxplot` in class. Try using `geom_violin` instead (tak
 -   Make sure to deal with `NA`
 
 ```{r warning=FALSE, message=FALSE, eval = TRUE, echo = FALSE}
-
-
+met_avg %>%
+  filter(!(region %in% NA)) %>%
+  ggplot(aes(x = elev_cat, fill = region)) +
+  geom_bar(position = "dodge") +
+  labs(title = "Elevation of Weather Stations in the United States by Region",
+       x = "Elevation Category", y = "Count") +
+  scale_fill_brewer(palette = "Pastel2") +
+  theme_bw() +
+  theme(plot.title = element_text(hjust = 0.5))
 ```
+
+Overall, we see that the Northeastern United States has slightly more high-elevation weather stations than low-elevation stations, but these numbers are pretty close to even among weather stations in the Northeast. It is likely that most of the low-elevation weather stations are close to the Atlantic coast, whereas the high-elevation stations are in the Appalachian Mountains.
+
+The Southeast primarily has low elevation stations, which is likely because of the overall lack of particularly high mountains in the Southeastern United States, outside of the southern portion of the Appalachin Mountains.
+
+The Northwest has very few low-elevation stations, and almost all of the weather stations in the Northwest are located well above sea level, as the majority of the Northwestern United States is situated in the Rocky Mountains.
+
+The Southwest has more high-elevation stations than low-elevation stations, likely due to the Rocky Mountains as well, and other mountain ranges in California, but there are still many lower-elevation stations, which are likely close to the coast of the Pacific ocean.
 
 ### 6. Use `stat_summary` to examine mean dew point and wind speed by region with standard deviation error bars
 
@@ -112,12 +214,32 @@ You saw how to use `geom_boxplot` in class. Try using `geom_violin` instead (tak
 -   Add another layer of `stats_summary` but change the geom to `"errorbar"` (see the help).
 -   Describe the graph and what you observe
 
-```{r, eval = TRUE, echo = TRUE}
-
+```{r, warning=FALSE, message=FALSE, eval = TRUE, echo = FALSE}
+met_avg %>%
+  filter(!(region %in% NA)) %>%
+  ggplot(aes(x = region, y = dew.point)) +
+  stat_summary(fun.data = "mean_sdl", geom = "errorbar") +
+  stat_summary(fun.data = "mean_sdl") +
+  labs(title = "Dew Point Temperatures in the USA from August 1 - 7", 
+       y = "Dew Point Temperature (°C)", x = "Region") +
+  theme_bw() +
+  theme(plot.title = element_text(hjust = 0.5))
 ```
 
--   Dew point temperature is...
--   Wind speed is...
+```{r, warning=FALSE, message=FALSE, eval = TRUE, echo = FALSE}
+met_avg %>%
+  filter(!(region %in% NA)) %>%
+  ggplot(aes(x = region, y = wind.sp)) +
+  stat_summary(fun.data = "mean_sdl", geom = "errorbar") +
+  stat_summary(fun.data = "mean_sdl") +
+  labs(title = "Wind Speeds in the USA from August 1 - 7", 
+       y = "Wind Speed", x = "Region") +
+  theme_bw() +
+  theme(plot.title = element_text(hjust = 0.5))
+```
+
+-   Dew point temperature is higher on average in the Northeast and the Southeast than it is in the Northwest and Southwest parts of the United States. However, the dew point temperature has a significantly larger range of values in the Western half of the United States than it does in the Eastern half. 
+-   Wind speed is higher on average in the Northwest and Southwestern parts of the United States than it is in the Eastern parts of the country. The range of wind speeds in each of the four regions of the United States is approximately equal, with the Northeastern region having the smallest range, but this range is not too much smaller than the other three regions' ranges.
 
 ### 7. Make a map showing the spatial trend in relative h in the US
 
@@ -128,12 +250,46 @@ You saw how to use `geom_boxplot` in class. Try using `geom_violin` instead (tak
 -   Add a legend
 
 ```{r, eval = TRUE, echo = FALSE}
+top10 <- met_avg %>%
+  arrange(desc(rh)) %>%
+  slice_head(n = 10)
 
+rh_pal <- colorNumeric(c('blue', 'purple', 'red'),
+                       domain = met_avg$rh, na.color = NA)
+
+met_avg %>% 
+  leaflet() %>%
+  addProviderTiles('OpenStreetMap') %>%
+  addCircles(lat = ~lat, lng = ~lon, color = ~rh_pal(rh), label = ~paste("RH:", round(rh, 2)),
+             opacity = 0.75, fillOpacity = 0.25, radius =~ elev*20) %>%
+  addMarkers(lat = ~lat, lng = ~lon, label = ~paste("RH:", round(rh, 2)), data = top10) %>%
+  addLegend('bottomleft', pal = rh_pal, values = met_avg$rh, title = "Relative Humidity")
 ```
 
 -   Describe trend in RH across the US
+
+Overall, the relative humidity in the US seems to decrease as we move further towards the west. Many of the high-humidity areas of the United States appear to be coastal areas, particularly the ones near the Gulf of Mexico and the East Coast of the US.
+
+As the weather stations move further west, the relative humidity appears to decrease, and based on the increasing size of the circles marking the locations of these weather stations, we see that the elevation of these weather stations is increasing and the relative humidity is decreasing. This makes sense, as the areas in the US which have high elevations for their weather stations and low relative humidities are primarily weather stations located in the Rocky Mountains, which explains the low humidity and high elevation.
+
+As we approach the West coast of the United States, the humidity increases again similar to the high humidity values found on the Eastern Seaboard and Gulf of Mexico, which also makes sense, as the humidity would be higher in the regions close to the ocean, and these areas are not high-elevation areas.
 
 ### 8. Use a ggplot extension
 
 -   Pick and extension (except cowplot) from [here](https://exts.ggplot2.tidyverse.org/gallery/) and make a plot of your choice using the met data (or met_avg)
 -   Might want to try examples that come with the extension first (e.g. ggtech, gganimate, ggforce)
+
+```{r warning=FALSE, message=FALSE, eval = TRUE, echo = FALSE}
+library(ggbeeswarm)
+
+met_avg %>% 
+  filter(!(region %in% NA)) %>%
+  ggplot(aes(x = elev_cat, y = wind.sp, color = region)) +
+  geom_quasirandom(method = "smiley", varwidth = TRUE) + 
+  labs(title = "Wind Speeds and Elevations of Weather Stations in the USA", 
+       x = "Elevation", y = "Wind Speed") +
+  labs(color = "Region") + 
+  theme_bw() +
+  theme(plot.title = element_text(hjust = 0.5)) +
+  scale_color_brewer(palette = "Set2")
+```
